--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
         </div>
         <div id="input-container" style="display:none;">
-            <form action="">
+            <form id="myForm" action="process_form.php" method="POST">
                 <input type="email" id="email" placeholder="Enter Your Email">
                 <input type="submit" id="submit" value="Sign up">
             </form>
